# kashira

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
data/: age_brackets.json  sleep_curve.json
docs/: data-guide.md  naming.md  timeshift-scoring.md
habaki/: index.html  package.json  tsconfig.json
habaki/menuki/: App.svelte  Titlebar.svelte  main.ts  styles.css
habaki/menuki/blades/timeshift/: Timeshift.svelte
habaki/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
habaki/src-tauri/blades/timeshift/: availability.cpp  availability.h  overrides.cpp  tsuka.cpp  tsuka.h  wakefulness.cpp  wakefulness.h
habaki/src-tauri/capabilities/: default.json
habaki/src-tauri/common/: timeutil.c  timeutil.h
habaki/src-tauri/icons/: icon.icns
habaki/src-tauri/src/: main.rs
ito/: age_brackets.json  age_caps.json  countries.json  sleep_curve.json  weekend.json
src/: App.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/blades/timeshift/: adjustments.cpp  adjustments.h  availability.cpp  availability.h  curves.cpp  curves.h  overrides.cpp  overrides.h  timeshift.cpp  timeshift.h  wakefulness.cpp  wakefulness.h
src-tauri/src/: main.rs
src/blades/timeshift/: Timeshift.svelte
tests/: CMakeLists.txt  score_cli.cpp  test_curves.cpp
